--- a/crunch/home.html
+++ b/crunch/home.html
@@ -6,19 +6,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Crunchyroll</title>
   <link rel="stylesheet" href="/css/home.css">
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap')
-  </style>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <nav class="navbar">
-    <a href=""></a>
-    <a href="/">Navegar</a>
-    <a href="/">Jogos</a>
-    <a href="/">Notícias</a>
-
+    <img class="menub" src="/imgs/cardapio.png" alt="c">
+    <a href="/"><img class="Crun" src="imgs/Crunchyroll.svg.png" alt="Crunchyroll"></a>
+    <a href="/">Séries</a>
+    <a href="/filmeModelo.html">Filmes</a>
   </nav>
+  <div class="Animeprin">
+    <a href="/"><img class="jujutsu" src="imgs/Jujutsu_Kaisen_logo.png" alt="jujutsu"></a>
+    <p>Yuji Itadori come um dedo amaldiçoado para salvar um colega de turma e agora Ryomen Sukuna, um terrível e poderoso feiticeiro conhecido como o Rei das Maldições, habita na alma de Itadori. As maldições são terrores sobrenaturais criados a partir das emoções humanas negativas.</p>
+    <a class="ver" href="/">COMEÇAR A ASSISTIR S1 E1</a>
+
+
+
+  </div>
 
 </body>
 
