Ajuste no Home e adição do rodapé
o rodapé ainda falta uns ajustes para terminar, sendo um deles centraliza-lo

--- a/crunch/home.html
+++ b/crunch/home.html
@@ -5,28 +5,109 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Crunchyroll</title>
-  <link rel="stylesheet" href="/css/home.css">
+  <link rel="stylesheet" href="css/home.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<header>
   <nav class="navbar">
-    <img class="menub" src="/imgs/cardapio.png" alt="c">
     <a href="/"><img class="Crun" src="imgs/Crunchyroll.svg.png" alt="Crunchyroll"></a>
     <a href="/">Séries</a>
     <a href="/filmeModelo.html">Filmes</a>
   </nav>
+</header>
+
+<body>
   <div class="Animeprin">
     <a href="/"><img class="jujutsu" src="imgs/Jujutsu_Kaisen_logo.png" alt="jujutsu"></a>
     <p>Yuji Itadori come um dedo amaldiçoado para salvar um colega de turma e agora Ryomen Sukuna, um terrível e poderoso feiticeiro conhecido como o Rei das Maldições, habita na alma de Itadori. As maldições são terrores sobrenaturais criados a partir das emoções humanas negativas.</p>
     <a class="ver" href="/">COMEÇAR A ASSISTIR S1 E1</a>
-
-
-
   </div>
 
+  <!-- conteudo principal -->
+  <section class="top3">
+    <h2>TOP 3 HOJE</h2>
+    <div class="top3_content">
+      <p>Exemplo 1</p>
+      <p>Exemplo 2</p>
+      <p>Exemplo 3</p>
+    </div>
+  </section>
+
+  <section class="film_recent">
+    <h2>Filmes Recentes</h2>
+    <div class="filrec_content">
+      <p>Exemplo 1</p>
+      <p>Exemplo 2</p>
+      <p>Exemplo 3</p>
+      <p>Exemplo 4</p>
+      <p>Exemplo 5</p>
+      <p>Exemplo 6</p>
+    </div>
+  </section>
+
+  <section class="serie_recent">
+    <h2>Séries Recentes</h2>
+    <div class="serec_content">
+      <p>Exemplo 1</p>
+      <p>Exemplo 2</p>
+      <p>Exemplo 3</p>
+      <p>Exemplo 4</p>
+      <p>Exemplo 5</p>
+      <p>Exemplo 6</p>
+    </div>
+  </section>
+
+  <div class="degrade">
+    <!-- roda pé -->
+    <footer class="foot">
+      <div class="box1">
+        <p class="contrast">Navegação</p>
+        <p>Séries Populares</p>
+        <p>Séries em Simulcast</p>
+        <p>Calendário de Lançamentos</p>
+        <p>Notícias</p>
+        <p>Jogos</p>
+      </div>
+      <div class="box2">
+        <p class="contrast">Contate-nos</p>
+        <p>YouTube</p>
+        <p>Facebook</p>
+        <p>Twitter</p>
+        <p>Instagram</p>
+        <p>TikTok</p>
+      </div>
+      <div class="box3">
+        <p class="contrast">Crunchyroll</p>
+        <p>Sobre</p>
+        <p>Ajuda/FAQ</p>
+        <p>Termos de Uso</p>
+        <p>Política de Privacidade</p>
+        <p>Ferramenta de Consentimento de Cookies</p>
+        <p>Solicitações de Imprensa</p>
+        <p>Baixe o App</p>
+        <p>Resgatar Código</p>
+        <p>Vagas</p>
+      </div>
+      <div>
+        <p class="contrast">Conta</p>
+        <p>Fila</p>
+        <p>Crunchylistas</p>
+        <p>Histórico</p>
+        <p>Minha Conta</p>
+        <p>Sair</p>
+      </div>
+    </footer>
+    <!-- "pós roda pe" -->
+    <hr class="linha">
+    <div class="final_box">
+      <img class="logo_sony" src="imgs/sony_pictures_logo.png" alt="">
+      <span> | </span>
+      <p class="ajuste">© Crunchyroll, LLC</p>
+    </div>
+  </div>
 </body>
 
 </html>
