--- a/crunch/home.html
+++ b/crunch/home.html
@@ -11,12 +11,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 </head>
 
-<header>
-  <nav class="navbar">
-    <a href="/"><img class="Crun" src="imgs/Crunchyroll.svg.png" alt="Crunchyroll"></a>
-    <a href="/">Séries</a>
-    <a href="/filmeModelo.html">Filmes</a>
-  </nav>
+<nav class="navbar">
+  <a href="home.html"><img class="Crun" src="imgs/Crunchyroll.svg.png" alt="Crunchyroll"></a>
+  <a href="todasasseries.html">Séries</a>
+  <a href="todosFilmes.html">Filmes</a>
+</nav>
 </header>
 
 <body>
@@ -63,51 +62,53 @@
   </section>
 
   <div class="degrade">
-    <!-- roda pé -->
-    <footer class="foot">
-      <div class="box1">
-        <p class="contrast">Navegação</p>
-        <p>Séries Populares</p>
-        <p>Séries em Simulcast</p>
-        <p>Calendário de Lançamentos</p>
-        <p>Notícias</p>
-        <p>Jogos</p>
+    <div class="centra">
+      <!-- roda pé -->
+      <footer class="foot">
+        <div class="box1">
+          <p class="contrast">Navegação</p>
+          <p>Séries Populares</p>
+          <p>Séries em Simulcast</p>
+          <p>Calendário de Lançamentos</p>
+          <p>Notícias</p>
+          <p>Jogos</p>
+        </div>
+        <div class="box2">
+          <p class="contrast">Contate-nos</p>
+          <p>YouTube</p>
+          <p>Facebook</p>
+          <p>Twitter</p>
+          <p>Instagram</p>
+          <p>TikTok</p>
+        </div>
+        <div class="box3">
+          <p class="contrast">Crunchyroll</p>
+          <p>Sobre</p>
+          <p>Ajuda/FAQ</p>
+          <p>Termos de Uso</p>
+          <p>Política de Privacidade</p>
+          <p>Ferramenta de Consentimento de Cookies</p>
+          <p>Solicitações de Imprensa</p>
+          <p>Baixe o App</p>
+          <p>Resgatar Código</p>
+          <p>Vagas</p>
+        </div>
+        <div class="box4">
+          <p class="contrast">Conta</p>
+          <p>Fila</p>
+          <p>Crunchylistas</p>
+          <p>Histórico</p>
+          <p>Minha Conta</p>
+          <p>Sair</p>
+        </div>
+      </footer>
+      <!-- "pós roda pe" -->
+      <hr class="linha">
+      <div class="final_box">
+        <img class="logo_sony" src="imgs/sony_pictures_logo.png" alt="">
+        <span> | </span>
+        <p class="ajuste">© Crunchyroll, LLC</p>
       </div>
-      <div class="box2">
-        <p class="contrast">Contate-nos</p>
-        <p>YouTube</p>
-        <p>Facebook</p>
-        <p>Twitter</p>
-        <p>Instagram</p>
-        <p>TikTok</p>
-      </div>
-      <div class="box3">
-        <p class="contrast">Crunchyroll</p>
-        <p>Sobre</p>
-        <p>Ajuda/FAQ</p>
-        <p>Termos de Uso</p>
-        <p>Política de Privacidade</p>
-        <p>Ferramenta de Consentimento de Cookies</p>
-        <p>Solicitações de Imprensa</p>
-        <p>Baixe o App</p>
-        <p>Resgatar Código</p>
-        <p>Vagas</p>
-      </div>
-      <div>
-        <p class="contrast">Conta</p>
-        <p>Fila</p>
-        <p>Crunchylistas</p>
-        <p>Histórico</p>
-        <p>Minha Conta</p>
-        <p>Sair</p>
-      </div>
-    </footer>
-    <!-- "pós roda pe" -->
-    <hr class="linha">
-    <div class="final_box">
-      <img class="logo_sony" src="imgs/sony_pictures_logo.png" alt="">
-      <span> | </span>
-      <p class="ajuste">© Crunchyroll, LLC</p>
     </div>
   </div>
 </body>
