adição do top3 e banner
e mais ajustes no rodapé

--- a/crunch/home.html
+++ b/crunch/home.html
@@ -20,6 +20,7 @@
 
 <body>
   <div class="Animeprin">
+    <img class="banner" src="imgs/jujutsu-kaisen-banner.jpg" alt="banner_jujustu">
     <a href="/"><img class="jujutsu" src="imgs/Jujutsu_Kaisen_logo.png" alt="jujutsu"></a>
     <img class="idade" src="imgs/nr16-auto.png" alt="Indicado para maiores de 14 anos">
     <p class="ling">◆ Dub | Leg</p>
@@ -28,12 +29,27 @@
   </div>
 
   <!-- conteudo principal -->
-  <section class="top3">
+  <section class="top_3">
     <h2>TOP 3 HOJE</h2>
     <div class="top3_content">
-      <p>Exemplo 1</p>
-      <p>Exemplo 2</p>
-      <p>Exemplo 3</p>
+      <div class="box">
+        <span class="number">1</span>
+        <img class="top1" src="imgs/series/Dragon Ball.jpe" alt="Dragin_Ball">
+      </div>
+      <p class="desca">Exemplo 1</p>
+
+      <div class="box">
+        <span class="number">2</span>
+        <img class="top1" src="imgs/series/Jujutsu.jpe" alt="Dragin_Ball">
+      </div>
+      <p class="desca1">Exemplo 2</p>
+
+      <div class="box">
+        <span class="number">3</span>
+        <img class="top1" src="imgs/series/Spy Family.jpe" alt="Dragin_Ball">
+      </div>
+      <p class="desca2">Exemplo 3</p>
+
     </div>
   </section>
 
@@ -106,7 +122,7 @@
       <hr class="linha">
       <div class="final_box">
         <img class="logo_sony" src="imgs/sony_pictures_logo.png" alt="">
-        <span> | </span>
+        <span class="tiny"> | </span>
         <p class="ajuste">© Crunchyroll, LLC</p>
       </div>
     </div>
