--- a/crunch/todosFilmes.html
+++ b/crunch/todosFilmes.html
@@ -131,7 +131,7 @@
       <hr class="linha">
       <div class="final_box">
         <img class="logo_sony" src="imgs/sony_pictures_logo.png" alt="">
-        <span> | </span>
+        <span class="tiny"> | </span>
         <p class="ajuste">© Crunchyroll, LLC</p>
       </div>
     </div>
