--- a/crunch/todosFilmes.html
+++ b/crunch/todosFilmes.html
@@ -19,69 +19,92 @@
 </header>
 
 <body>
-  <h1>Filmes</h1>
+  <h1>Filmes Mais Populares</h1>
   <div class="container">
 
     <div>
       <!-- vou fzr assim mas acho que deve ter uma tag mais semântica pra isso -->
       <img class="film" src="imgs/filmes/Dragon Ball super super hero.png" alt="Dragon Ball Super Hero">
-      <p>Exemplo</p>
+      <p>Dragon Ball Super: SUPER HERO</p>
+      <P class="leg">Dub | Leg</P>
     </div>
 
     <div>
       <img class="film" src="imgs/filmes/Full metal the movie.jpg" alt="">
-      <p>Exemplo</p>
+      <p >Fullmetal Alchemist: The Conqueror <br>of Shamballa</p>
+      <P class="leg">Legendado</P>
+
     </div>
 
     <div>
       <img class="film" src="imgs/filmes/Demon slayer mugen train.jpg" alt="">
-      <p>Exemplo</p>
+      <p>Demon Slayer: Kimetsu no Yaiba <br>Mugen Train</p>
+      <P class="leg">Dub | Leg</P>
+
     </div>
 
     <div>
-      <img class="film" src="imgs/filmes/Your-Name.png" alt="">
-      <p>Exemplo</p>
+      <img class="film" src="imgs/Oddtaxi.jpg" alt="">
+      <p>ODDTAXI in the woods</p>
+      <P class="leg">Legendado</P>
+
     </div>
 
     <div>
       <img class="film" src="imgs/filmes/The stranger by the shore.jpe" alt="">
-      <p>Exemplo</p>
+      <p>The Stranger by the Shore </p>
+      <P class="leg">Dub | Leg</P>
+
     </div>
 
     <div>
       <img class="film" src="imgs/filmes/I_ve Always Liked You Eu sempre amei você.jpg" alt="">
-      <p>Exemplo</p>
+      <p>I've always liked you</p>
+      <P class="leg">Dub | Leg</P>
+
     </div>
 
     <div>
       <img class="film" src="imgs/filmes/Jujutsu 0.jpg" alt="">
-      <p>Exemplo</p>
+      <p>JUJUTSU KAISEN 0</p>
+      <P class="leg">Dub | Leg</P>
+
     </div>
 
     <div>
       <img class="film" src="imgs/filmes/Given-the-movie.jpg" alt="">
-      <p>Exemplo</p>
+      <p>Given - The Movie</p>
+      <P class="leg">Legendado</P>
+
     </div>
 
     <div>
       <img class="film" src="imgs/filmes/Hakubo.jpe" alt="">
-      <p>Exemplo</p>
+      <p>Hakubo</p>
+      <P class="leg">Legendado</P>
+
     </div>
 
     <div>
       <img class="film" src="imgs/filmes/Goblin slayer.jpg" alt="">
-      <p>Exemplo</p>
+      <p>GOBLIN SLAYER Goblin's Crown</p>
+      <P class="leg">Legendado</P>
+
     </div>
 
     <div>
       <!-- esse aq precisa mudar a imagem -->
       <img class="film" src="imgs/filmes/Haikyu-the-movie.jpg" alt="">
-      <p>Exemplo</p>
+      <p>HAIKYU!! A Batalha de Conceitos</p>
+      <P class="leg">Legendado</P>
+
     </div>
 
     <div>
-      <img class="film" src="imgs/filmes/suzume.png" alt="">
-      <p>Exemplo</p>
+      <img class="film" src="imgs/Suzumee.jpg" alt="">
+      <p>Suzume</p>
+      <P class="leg">Dub | Leg</P>
+
     </div>
 
   </div>
