--- a/crunch/todasasseries.html
+++ b/crunch/todasasseries.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/tdsFilmes.css">
+  <link rel="stylesheet" href="css/tdsseries.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
@@ -19,9 +19,22 @@
 </header>
 
 <body>
-  <h1>Séries</h1>
-  <div class="container">
+  <section class="upbar">
+    <div class="grid">
+      <h1 id="serie">SÉRIES</h1>
+      <div class="flex">
+        <img class="tam " src="imgs/Mais opcções.png" alt="op">
+        <p class="tamanho">MAIS POPULARES</p>
+      </div>
 
+      <div class="flex2">
+        <img class="tam " src="imgs/Filtro.png" alt="filtro">
+        <p class="tamanho">FILTRAR</p>
+      </div>
+    </div>
+
+  </section>
+  <div class="container">
     <div>
       <!-- vou fzr assim mas acho que deve ter uma tag mais semântica pra isso -->
       <a href="seriesmodelo.html"><img class="film" src="imgs/series/Blue Lock.jpe" alt=""></a>
