--- a/crunch/todasasseries.html
+++ b/crunch/todasasseries.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-  <title>Todas as Séries</title>
+  <title>Todos os Animes</title>
 </head>
 <header>
   <nav class="navbar">
@@ -21,7 +21,7 @@
 <body>
   <section class="upbar">
     <div class="grid">
-      <h1 id="serie">SÉRIES</h1>
+      <h1 id="serie">Animes Mais Populares</h1>
       <div class="flex">
         <img class="tam " src="imgs/Mais opcções.png" alt="op">
         <p class="tamanho">MAIS POPULARES</p>
@@ -38,62 +38,84 @@
     <div>
       <!-- vou fzr assim mas acho que deve ter uma tag mais semântica pra isso -->
       <a href="seriesmodelo.html"><img class="film" src="imgs/series/Blue Lock.jpe" alt=""></a>
-      <p>Exemplo</p>
+      <p>BLUE LOCK</p>
+      <p>Dub | Leg</p>
     </div>
 
     <div>
       <a href="seriesmodelo.html"><img class="film" src="imgs/series/chainsaw man.jpe" alt=""></a>
-      <p>Exemplo</p>
+      <p>Chainsaw Man</p>
+      <p>Dub | Leg</p>
+
     </div>
 
     <div>
       <a href="seriesmodelo.html"><img class="film" src="imgs/series/Dragon Ball.jpe" alt=""></a>
-      <p>Exemplo</p>
+      <p>Dragon Ball Super</p>
+      <p>Dub | Leg</p>
+
     </div>
 
     <div>
       <a href="seriesmodelo.html"><img class="film" src="imgs/series/Dr.Stone.jpe" alt=""></a>
-      <p>Exemplo</p>
+      <p>Dr. STONE</p>
+      <p>Dub | Leg</p>
+
     </div>
 
     <div>
       <a href="seriesmodelo.html"><img class="film" src="imgs/series/hunter hunter.jpe" alt=""></a>
-      <p>Exemplo</p>
+      <p>Hunter x Hunter</p>
+      <p class="leg">Legendado</p>
+
     </div>
 
     <div>
       <a href="seriesmodelo.html"><img class="film" src="imgs/series/Spy Family.jpe" alt=""></a>
-      <p>Exemplo</p>
+      <p>SPY x FAMILY</p>
+      <p class="leg">Dub | Leg</p>
+
     </div>
 
     <div>
       <a href="seriesmodelo.html"><img class="film" src="imgs/series/Shingeki.jpe" alt=""></a>
-      <p>Exemplo</p>
+      <p>Attack on Titan</p>
+      <p class="leg">Dub | Leg</p>
+
     </div>
 
     <div>
-      <a href="seriesmodelo.html"><img class="film" src="imgs/series/one punch man.jpg" alt=""></a>
-      <p>Exemplo</p>
+      <a href="seriesmodelo.html"><img class="film" src="imgs/my-hero.jpg" alt=""></a>
+      <p>My Hero Academia</p>
+      <p class="leg">Dub | Leg</p>
+
     </div>
 
     <div>
       <a href="seriesmodelo.html"><img class="film" src="imgs/series/One piece.jpe" alt=""></a>
-      <p>Exemplo</p>
+      <p>One Piece</p>
+      <p class="leg">Legendado</p>
     </div>
 
     <div>
       <a href="seriesmodelo.html"><img class="film" src="imgs/series/Jujutsu.jpe" alt=""></a>
-      <p>Exemplo</p>
+      <p>JUJUTSU KAISEN</p>
+      <p class="leg">Dub | Leg</p>
+
     </div>
 
     <div>
       <a href="seriesmodelo.html"><img class="film" src="imgs/series/Naruto.jpe" alt=""></a>
-      <p>Exemplo</p>
+      <p>Nauto Shippuden</p>
+      <p class="leg">Legendado</p>
+
     </div>
 
     <div>
       <a href="seriesmodelo.html"><img class="film" src="imgs/series/Demon Slayer.jpe" alt=""></a>
-      <p>Exemplo</p>
+      <p>Demon Slayer: Kimetsu no Yaiba</p>
+      <p class="leg">Dub | Leg</p>
+
     </div>
 
   </div>
