--- a/crunch/todosFilmes.html
+++ b/crunch/todosFilmes.html
@@ -24,21 +24,21 @@
 
     <div>
       <!-- vou fzr assim mas acho que deve ter uma tag mais semântica pra isso -->
-      <img class="film" src="imgs/filmes/Dragon Ball super super hero.png" alt="Dragon Ball Super Hero">
-      <p>Dragon Ball Super: SUPER HERO</p>
+      <img class="film" src="imgs/filmes/DBS_1.jpg" alt="Dragon Ball Super Hero">
+      <p>Dragon Ball Super: <br>SUPER HERO</p>
       <P class="leg">Dub | Leg</P>
     </div>
 
     <div>
       <img class="film" src="imgs/filmes/Full metal the movie.jpg" alt="">
-      <p >Fullmetal Alchemist: The Conqueror <br>of Shamballa</p>
+      <p >Fullmetal Alchemist: <br>The Conqueror of Shamballa</p>
       <P class="leg">Legendado</P>
 
     </div>
 
     <div>
       <img class="film" src="imgs/filmes/Demon slayer mugen train.jpg" alt="">
-      <p>Demon Slayer: Kimetsu no Yaiba <br>Mugen Train</p>
+      <p>Demon Slayer: <br>Kimetsu no Yaiba Mugen Train</p>
       <P class="leg">Dub | Leg</P>
 
     </div>
