ajustes no arquivo padrão e inicio da pagina filme modelo

--- a/crunch/home.html
+++ b/crunch/home.html
@@ -11,12 +11,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 </head>
-
-<nav class="navbar">
-  <a href="home.html"><img class="Crun" src="imgs/Crunchyroll.svg.png" alt="Crunchyroll"></a>
-  <a href="todasasseries.html">Séries</a>
-  <a href="todosFilmes.html">Filmes</a>
-</nav>
+<header>
+  <nav class="navbar">
+    <a href="home.html"><img class="Crun" src="imgs/Crunchyroll.svg.png" alt="Crunchyroll"></a>
+    <a href="todasasseries.html">Séries</a>
+    <a href="todosFilmes.html">Filmes</a>
+  </nav>
 </header>
 
 <body>
