--- a/crunch/filmeModelo.html
+++ b/crunch/filmeModelo.html
@@ -23,14 +23,15 @@
 
   <div class="geral">
     <section class="modelo">
-      <img class="modeloLeft" src="imgs/filmes/DBS_1.jpg" alt="DBS">
+      <img class="modeloLeft" src="imgs/filme e serie modelo/dragon ball filme modelo.jpe" alt="DBS">
       <div class="modeloRight">
+        <img class="salvar" src="imgs/salvar branco.png" alt="salvar">
+        <h2>Dragon Ball (Filmes) <span class="barra">|</span> <span class="num">4.7 ★ (8.3K)▾</span></h2>
         <h1 id="titulo">Dragon Ball Super: Super Herói</h1>
-        <p><img src="" alt=""><span class="light ano">2021</span> <img src="" alt=""> <span class="light ano">1h 40min</span></p>
-        <p>Diretor: <span class="light">Tetsurô Kodama</span></p>
-        <span id="categoria">FILMES</span>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui expedita, illo maxime earum aperiam porro.</p>
-        <span>icons icons</span>
+        <p><img class="idade" src="imgs/filme e serie modelo/idade12.png" alt="Indicado para maiores de 12 anos"><span class="p">◆</span> <span class="ling">Dub | Leg</span></p>
+        <p class="lançou">Lançado em 12 jul 2023 </p>
+        <p><img class="like" src="imgs/filme e serie modelo/likee branco.png" alt="like"> <span class="li">5.2K</span> <img class="dislike" src="imgs/filme e serie modelo/dislike branco.png" alt=""> <span class="li1">73</span> <img class="comp" src="imgs/filme e serie modelo/compartilhar branco.png" alt="compartilhar"></p>
+        <p>O exército Red Ribbon havia sido destruído por Son Goku... Mas certos indivíduos decidiram levar adiante sua missão e criaram os androides supremos: Gamma 1 e Gamma 2. Estes dois androides - que se intitulam "super-heróis" - decidem atacar Piccolo e Gohan! Qual será o objetivo do Novo Exército Red Ribbon? Quando o perigo é iminente, é então que desperta o Super-Herói!</p>
       </div>
     </section>
 
