ajustes na navbar
está quase finalizada, faltando apenas alguns icons

--- a/crunch/home.html
+++ b/crunch/home.html
@@ -13,9 +13,18 @@
 </head>
 <header>
   <nav class="navbar">
-    <a href="home.html"><img class="Crun" src="imgs/Crunchyroll.svg.png" alt="Crunchyroll"></a>
-    <a href="todasasseries.html">Séries</a>
-    <a href="todosFilmes.html">Filmes</a>
+    <div class="divLarger">
+      <a class="home" href="home.html"><img class="Crun" src="imgs/Crunchyroll.svg.png" alt="Crunchyroll"></a>
+      <a class="tdsS" href="todasasseries.html">Séries</a>
+      <a class="tdsF" href="todosFilmes.html">Filmes</a>
+      <div class="iconzinhos">
+        <img src="imgs/" alt="">
+      </div>
+      <div class="user">
+        <img class="iconuser" src="imgs/filme e serie modelo/nobara iconn.png" alt="user">
+        <span class="setinha">▾</span>
+      </div>
+    </div>
   </nav>
 </header>
 
@@ -26,7 +35,7 @@
     <img class="idade" src="imgs/nr16-auto.png" alt="Indicado para maiores de 16 anos">
     <p class="ling">◆ Dub | Leg</p>
     <p class="sinopse">Yuji Itadori come um dedo amaldiçoado para salvar um colega de turma e agora Ryomen Sukuna,<br> um terrível e poderoso feiticeiro conhecido como o Rei das Maldições, habita na alma de Itadori. <br> As maldições são terrores sobrenaturais criados a partir das emoções humanas negativas.</p>
-    <a class="ver" href="/"> <strong><span class="seta">▷</span> <span class="com">COMEÇAR A ASSISTIR S1 E1</span></strong></a>
+    <a class="ver" href="/crunch/seriesmodelo.html"> <strong><span class="seta">▷</span> <span class="com">COMEÇAR A ASSISTIR S1 E1</span></strong></a>
   </div>
 
   <!-- conteudo principal -->
