--- a/crunch/todosFilmes.html
+++ b/crunch/todosFilmes.html
@@ -13,81 +13,90 @@
 </head>
 <header>
   <nav class="navbar">
-    <a href="home.html"><img class="Crun" src="imgs/Crunchyroll.svg.png" alt="Crunchyroll"></a>
-    <a href="todasasseries.html">Séries</a>
-    <a href="todosFilmes.html">Filmes</a>
+    <div class="divLarger">
+      <a class="home" href="home.html"><img class="Crun" src="imgs/Crunchyroll.svg.png" alt="Crunchyroll"></a>
+      <a class="tdsS" href="todasasseries.html">Séries</a>
+      <a class="tdsF" href="todosFilmes.html">Filmes</a>
+      <div class="iconzinhos">
+        <img src="imgs/" alt="">
+      </div>
+      <div class="user">
+        <img class="iconuser" src="imgs/filme e serie modelo/nobara iconn.png" alt="user">
+        <span class="setinha">▾</span>
+      </div>
+    </div>
   </nav>
 </header>
 
 <body>
-  <h1>Filmes Mais Populares</h1>
+  <h1 id="titulo">Filmes Mais Populares</h1>
   <div class="container">
 
     <div>
       <!-- vou fzr assim mas acho que deve ter uma tag mais semântica pra isso -->
-      <img class="film" src="imgs/filmes/DBS_1.jpg" alt="Dragon Ball Super Hero">
+      <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/filmes/DBS_1.jpg" alt="Dragon Ball Super Hero"></a>
       <p>Dragon Ball Super: <br>SUPER HERO</p>
       <P class="leg">Dub | Leg</P>
     </div>
 
     <div>
-      <img class="film" src="imgs/filmes/Full metal the movie.jpg" alt="">
-      <p >Fullmetal Alchemist: <br>The Conqueror of Shamballa</p>
+      <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/filmes/Full metal the movie.jpg" alt="Full metal the movie"></a>
+      <p>Fullmetal Alchemist: <br>The Conqueror of Shamballa</p>
       <P class="leg">Legendado</P>
 
     </div>
 
     <div>
-      <img class="film" src="imgs/filmes/Demon slayer mugen train.jpg" alt="">
+      <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/filmes/Demon slayer mugen train.jpg" alt="Demon slayer mugen train"></a>
       <p>Demon Slayer: <br>Kimetsu no Yaiba Mugen Train</p>
       <P class="leg">Dub | Leg</P>
 
     </div>
 
     <div>
-      <img class="film" src="imgs/Oddtaxi.jpg" alt="">
+      <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/Oddtaxi.jpg" alt="Oddtaxi"></a>
       <p>ODDTAXI in the woods</p>
       <P class="leg">Legendado</P>
 
     </div>
 
     <div>
-      <img class="film" src="imgs/filmes/The stranger by the shore.jpe" alt="">
+      <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/filmes/The stranger by the shore.jpe" alt="The stranger by the shore"></a>
       <p>The Stranger by the Shore </p>
       <P class="leg">Dub | Leg</P>
 
     </div>
 
     <div>
-      <img class="film" src="imgs/filmes/I_ve Always Liked You Eu sempre amei você.jpg" alt="">
+      <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/filmes/I_ve Always Liked You Eu sempre amei você.jpg" alt="I_ve Always Liked You"></a>
       <p>I've always liked you</p>
       <P class="leg">Dub | Leg</P>
 
     </div>
 
     <div>
-      <img class="film" src="imgs/filmes/Jujutsu 0.jpg" alt="">
+      <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/filmes/Jujutsu 0.jpg" alt="Jujutsu"></a>
       <p>JUJUTSU KAISEN 0</p>
       <P class="leg">Dub | Leg</P>
 
     </div>
 
     <div>
-      <img class="film" src="imgs/filmes/Given-the-movie.jpg" alt="">
+      <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/filmes/Given-the-movie.jpg" alt="Given-the-movie"></a>
       <p>Given - The Movie</p>
       <P class="leg">Legendado</P>
 
     </div>
 
     <div>
-      <img class="film" src="imgs/filmes/Hakubo.jpe" alt="">
+      <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/filmes/Hakubo.jpe" alt="Hakubo"></a>
       <p>Hakubo</p>
       <P class="leg">Legendado</P>
 
     </div>
 
     <div>
-      <img class="film" src="imgs/filmes/Goblin slayer.jpg" alt="">
+      <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/filmes/Goblin slayer.jpg" alt="Goblin slayer"></a>
       <p>GOBLIN SLAYER Goblin's Crown</p>
       <P class="leg">Legendado</P>
 
@@ -95,14 +104,14 @@
 
     <div>
       <!-- esse aq precisa mudar a imagem -->
-      <img class="film" src="imgs/filmes/Haikyu-the-movie.jpg" alt="">
+      <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/filmes/Haikyu-the-movie.jpg" alt="Haikyu-the-movie"></a>
       <p>HAIKYU!! A Batalha de Conceitos</p>
       <P class="leg">Legendado</P>
 
     </div>
 
     <div>
-      <img class="film" src="imgs/Suzumee.jpg" alt="">
+      <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/Suzumee.jpg" alt="Suzumee"></a>
       <p>Suzume</p>
       <P class="leg">Dub | Leg</P>
 
