correções na pag: filmes / series

--- a/crunch/todasasseries.html
+++ b/crunch/todasasseries.html
@@ -29,6 +29,7 @@
 </header>
 
 <body>
+  <h1 id="title">Todos os Animes</h1>
   <section class="upbar">
     <div class="grid">
       <h1 id="serie">Animes Mais Populares</h1>
@@ -42,34 +43,33 @@
         <p class="tamanho">FILTRAR</p>
       </div>
     </div>
-
   </section>
   <div class="container">
     <div>
       <!-- vou fzr assim mas acho que deve ter uma tag mais semântica pra isso -->
       <a href="seriesmodelo.html"><img class="film" src="imgs/series/Blue Lock.jpe" alt=""></a>
       <p>BLUE LOCK</p>
-      <p>Dub | Leg</p>
+      <p class="leg">Dub | Leg</p>
     </div>
 
     <div>
       <a href="seriesmodelo.html"><img class="film" src="imgs/series/chainsaw man.jpe" alt=""></a>
       <p>Chainsaw Man</p>
-      <p>Dub | Leg</p>
+      <p class="leg">Dub | Leg</p>
 
     </div>
 
     <div>
       <a href="seriesmodelo.html"><img class="film" src="imgs/series/Dragon Ball.jpe" alt=""></a>
       <p>Dragon Ball Super</p>
-      <p>Dub | Leg</p>
+      <p class="leg">Dub | Leg</p>
 
     </div>
 
     <div>
       <a href="seriesmodelo.html"><img class="film" src="imgs/series/Dr.Stone.jpe" alt=""></a>
       <p>Dr. STONE</p>
-      <p>Dub | Leg</p>
+      <p class="leg">Dub | Leg</p>
 
     </div>
 
