--- a/crunch/todosFilmes.html
+++ b/crunch/todosFilmes.html
@@ -29,84 +29,97 @@
 </header>
 
 <body>
-  <h1 id="titulo">Filmes Mais Populares</h1>
-  <div class="container">
+  <h1 id="title">Todos os Filmes</h1>
+  <section class="upbar">
+    <div class="grid">
+      <h1 id="serie">Filmes Mais Populares</h1>
+      <div class="flex">
+        <img class="tam " src="imgs/Mais opcções.png" alt="op">
+        <p class="tamanho">MAIS POPULARES</p>
+      </div>
 
+      <div class="flex2">
+        <img class="tam " src="imgs/Filtro.png" alt="filtro">
+        <p class="tamanho">FILTRAR</p>
+      </div>
+    </div>
+  </section>
+
+  <div class="container">
     <div>
       <!-- vou fzr assim mas acho que deve ter uma tag mais semântica pra isso -->
       <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/filmes/DBS_1.jpg" alt="Dragon Ball Super Hero"></a>
       <p>Dragon Ball Super: <br>SUPER HERO</p>
-      <P class="leg">Dub | Leg</P>
+      <p class="leg">Dub | Leg</p>
     </div>
 
     <div>
       <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/filmes/Full metal the movie.jpg" alt="Full metal the movie"></a>
       <p>Fullmetal Alchemist: <br>The Conqueror of Shamballa</p>
-      <P class="leg">Legendado</P>
+      <p class="leg">Legendado</p>
 
     </div>
 
     <div>
       <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/filmes/Demon slayer mugen train.jpg" alt="Demon slayer mugen train"></a>
       <p>Demon Slayer: <br>Kimetsu no Yaiba Mugen Train</p>
-      <P class="leg">Dub | Leg</P>
+      <p class="leg">Dub | Leg</p>
 
     </div>
 
     <div>
       <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/Oddtaxi.jpg" alt="Oddtaxi"></a>
       <p>ODDTAXI in the woods</p>
-      <P class="leg">Legendado</P>
+      <p class="leg">Legendado</p>
 
     </div>
 
     <div>
       <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/filmes/The stranger by the shore.jpe" alt="The stranger by the shore"></a>
       <p>The Stranger by the Shore </p>
-      <P class="leg">Dub | Leg</P>
+      <p class="leg">Dub | Leg</p>
 
     </div>
 
     <div>
       <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/filmes/I_ve Always Liked You Eu sempre amei você.jpg" alt="I_ve Always Liked You"></a>
       <p>I've always liked you</p>
-      <P class="leg">Dub | Leg</P>
+      <p class="leg">Dub | Leg</p>
 
     </div>
 
     <div>
       <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/filmes/Jujutsu 0.jpg" alt="Jujutsu"></a>
       <p>JUJUTSU KAISEN 0</p>
-      <P class="leg">Dub | Leg</P>
+      <Pp class="leg">Dub | Leg</p>
 
     </div>
 
     <div>
       <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/filmes/Given-the-movie.jpg" alt="Given-the-movie"></a>
       <p>Given - The Movie</p>
-      <P class="leg">Legendado</P>
+      <p class="leg">Legendado</p>
 
     </div>
 
     <div>
       <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/filmes/Hakubo.jpe" alt="Hakubo"></a>
       <p>Hakubo</p>
-      <P class="leg">Legendado</P>
+      <p class="leg">Legendado</p>
 
     </div>
 
     <div>
       <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/filmes/Goblin slayer.jpg" alt="Goblin slayer"></a>
       <p>GOBLIN SLAYER Goblin's Crown</p>
-      <P class="leg">Legendado</P>
+      <p class="leg">Legendado</p>
 
     </div>
 
     <div>
-      <!-- esse aq precisa mudar a imagem -->
       <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/filmes/Haikyu-the-movie.jpg" alt="Haikyu-the-movie"></a>
       <p>HAIKYU!! A Batalha de Conceitos</p>
-      <P class="leg">Legendado</P>
+      <p class="leg">Legendado</p>
 
     </div>
 
