deixei toda a tela do filme modelo basicamente pronta só falta por o player

--- a/crunch/filmeModelo.html
+++ b/crunch/filmeModelo.html
@@ -41,17 +41,43 @@
         <p class="lançou">Lançado em 12 jul 2023 </p>
         <p><img class="like" src="imgs/filme e serie modelo/likee branco.png" alt="like"> <span class="li">5.2K</span> <img class="dislike" src="imgs/filme e serie modelo/dislike branco.png" alt=""> <span class="li1">73</span> <img class="comp" src="imgs/filme e serie modelo/compartilhar branco.png" alt="compartilhar"></p>
         <p>O exército Red Ribbon havia sido destruído por Son Goku... Mas certos indivíduos decidiram levar adiante sua missão e criaram os androides supremos: Gamma 1 e Gamma 2. Estes dois androides - que se intitulam "super-heróis" - decidem atacar Piccolo e Gohan! Qual será o objetivo do Novo Exército Red Ribbon? Quando o perigo é iminente, é então que desperta o Super-Herói!</p>
+        <input type="checkbox" id="item-1">
+        <div class="checkbox">
+          <label for="item-1"><strong class="mos">Mostrar Mais</strong></label>
+          <p><strong>Áudio</strong>
+            <span class="audio">Japonês, Português (Brasil), English, <br>Català, Deutsch, Español (América Latina),<br> Español (España),Français, Italiano, Polski, <br>Português (Portugal), हिंदी, 中文 (國語), ไทย</span>
+          </p>
+          <hr>
+          <p><strong>Legendas</strong> <span class="pt">
+              Português (Brasil)</span></p>
+          <hr>
+          <p><strong>Classificação de Conteúdo</strong><span class="id">A12</span> <span class="idd">
+              Violência, Nudez, Drogas</span></p>
+        </div>
       </div>
     </section>
 
-
-    <section class="comentarios">
-      <p class="subTitulo">Comentários</p>
-      <p>Comentar como "User pipipipopopo"</p>
-      <textarea class="txtArea lato-regular" cols="80" rows="2" placeholder="Comentários"></textarea>
-      <p>icon comentar</p>
-    </section>
+    <div class="mdcom">
+      <section class="comentarios">
+        <img class="icoon" src="imgs/filme e serie modelo/nobara iconn.png" alt="icon">
+        <p><strong class="i">598 Comentários</strong><img class="mais" src="imgs/Mais opcções.png" alt="mais opçoes"> <span class="m"><strong>Mais Populares</strong></span></p>
+        <p class="subTitulo"> Comentar como <img class="coroa" src="imgs/filme e serie modelo/coroaa.png" alt="coroa"><span class="coment">ArthurUzumaki</span></p>
+        <textarea class="txtArea lato-regular" cols="80" rows="2" placeholder="Deixar um Comentário "></textarea>
+        <img class="comentar" src="imgs/filme e serie modelo/comentar.png" alt="comentar">
+      </section>
+      <p><img class="icon1" src="imgs/filme e serie modelo/eren iconn.png" alt=""><strong class="c">JoãoUchiha</strong> <span class="t"> há 8 meses</span></p>
+      <p class="com1">Dragon ball é o pai dos animes, têm que respeitar.❤️‍🔥</p>
+      <img class="coments" src="imgs/filme e serie modelo/comentarios-.png" alt="coments">
+      <div class="gojo">
+        <p class="ex"><strong>EXIBIR 26 RESPOSTAS▾</strong></p>
+        <p><img class="icon1" src="imgs/filme e serie modelo/gojo iconn.png" alt=""><strong class="c">SatoroGozo</strong> <span class="t"> há 8 meses</span></p>
+        <p class="com2">Curto esse filme, a história é meio bobinha até pro padrão do super, mas ao menos tem umas lutas legais. <br> Na época que anunciaram que seria em 3d eu fiquei com pé atrás, é uma escolha questionável <br>pra um filme,no fim o 3d desse filme é ótimo, não me importaria em ver mais dragon ball nesse estilo.</p>
+        <img class="coments1" src="imgs/filme e serie modelo/comentarios-.png" alt="coments">
+        <p class="ex1"><strong>EXIBIR 10 RESPOSTAS▾</strong></p>
+      </div>
+    </div>
   </div>
+
 
 
   <div class="degrade">
