modelo serie estou fazendo tudo amém

--- a/crunch/filmeModelo.html
+++ b/crunch/filmeModelo.html
@@ -15,7 +15,7 @@
   <nav class="navbar">
     <div class="divLarger">
       <a class="home" href="home.html"><img class="Crun" src="imgs/Crunchyroll.svg.png" alt="Crunchyroll"></a>
-      <a class="tdsS" href="todasasseries.html">Séries</a>
+      <a class="tdsS" href="todasasseries.html">Animes</a>
       <a class="tdsF" href="todosFilmes.html">Filmes</a>
       <div class="iconzinhos">
         <img src="imgs/" alt="">
